Added basic unit tests for app credentials